# SycoScope

./: .gitignore  main.py  pyproject.toml
SAE/: test.ipynb
SAE/datasets/: AITA-NTA-OG.csv  AITA-YTA.csv  SS.csv
SAE/notebooks/: data.ipynb  labels.ipynb
SAE/pipeline/: cache_activations.py  generations.py  label_clusters.py  train_sae.py
SAE/results/trained_sae/L18_n10_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  sae.pt
SAE/results/trained_sae/L18_n10_k3_uncentered_s0/.ipynb_checkpoints/: metrics-checkpoint.json
SAE/results/trained_sae/L18_n15_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  sae.pt
SAE/results/trained_sae/L18_n15_k3_uncentered_s0/.ipynb_checkpoints/: metrics-checkpoint.json
SAE/results/trained_sae/L18_n20_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  sae.pt
SAE/results/trained_sae/L18_n20_k3_uncentered_s0/.ipynb_checkpoints/: metrics-checkpoint.json
SAE/results/trained_sae/L18_n30_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  metrics.json  sae.pt
SAE/results/trained_sae/L18_n40_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  metrics.json  sae.pt
SAE/results/trained_sae/L18_n5_k3_uncentered_s0/: assignment_strength.npy  assignments.npy  config.json  labels.json  sae.pt
tests/: test_label_clusters.py
tool_calling/: run_agent.py
utils/: datasets.py  inference.py  llm_judge.py  model.py  sae_utils.py
(+1 files in other folders)
