[project]
name = "sycoscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.116.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "spacy>=3.8.14",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
]
